# remoteDeployQtCreator

./: CMakeLists.txt  README.md  main.cpp
